--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 			function _addToCart(){
 			
 				var productItem = '<div class="cart-item">\
-						<img src="assets/img/product-1.jpg" />\
+						<img src="sampel.jpg" />\
 						<div class="text">\
 							<h6 class="title">\
 								<span>Judul Produk </span>\
